--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,8 @@ section {
   justify-content: center;
   align-items: center;
   gap: 2rem;
+  margin: 0 auto;
+  font-family: system-ui;
 }
 
 section img {
